[package]
name = "bindings"   
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_api"                
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }

tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11", features = ["json", "gzip", "stream"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

ibm-quantum-platform-api = { path = "../ibm-quantum-platform-api" }