[package]
name = "bindings"   
version = "0.1.0"
edition = "2024"

[lib]
name = "rust_api"                
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.26", features = ["extension-module"] }

tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "^0.12", features = ["json", "rustls-tls"] }

serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

ibm-quantum-platform-api = { path = "../ibm-quantum-platform-api" }